# libinjection

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  COPYING  COPYING.txt  Makefile  Makefile.am  Makefile.in  README.md  RELEASE-HOWTO.md  autogen.sh  config.h.in  configure  configure-clang.sh  configure-gcc-hardened.sh  configure-gcov.sh  configure-gprof.sh  configure.ac  make-ci.sh  modp_xml.c  run-clang-static-analyzer.sh  run-gcov-samples.sh  run-gcov-unittests.sh  tags.sh  test-gprof.sh
c/: .gitignore  Makefile  clang-static-analyzer.sh  clang.sh  example1.c  extractor.cpp  fingerprints.txt  fingerprints2c.py  fingerprints2sqli.py  fptool.c  html5_cli.c  is_sqli_cli.cpp  libinjection.h  libinjection_html5.c  libinjection_html5.h  libinjection_module.c  libinjection_private.h  libinjection_sqli.c  libinjection_sqli.h  libinjection_sqli_data.h  libinjection_xss.c  libinjection_xss.h  make_parens.py  modp_ascii.c  modp_ascii.h  modp_ascii_data.h  modp_ascii_gen.c  modp_burl.c  modp_burl.h  modp_burl_data.h  modp_burl_gen.c  modp_qsiter.c  modp_qsiter.h  modp_stdint.h  modp_xml.c  modp_xml.h  python_libinjection_module.c  reader.c  reader.cpp  reader_etsy.cpp  (+18 more)
cicada/: QueueAWS.py  QueueNull.py  StateDynamo.py  StateRedis.py  cicada-event.py  cicada-pump.py  cicada.py  console.txt  events.py  libinjection.py  libinjection_test.py  pollers.py  publishers.py  pump.py  shell.py  sourcecontrol.py  status.html  worker.py
cxxtest/: README  Versions
data/: README.md  false_positives.txt  false_positves.txt  sqli-@ru_raz0-20160705.txt  sqli-arithmetic_blind_sqli.txt  sqli-arithmetic_variations.txt  sqli-edb-17934.txt  sqli-forums.txt  sqli-fullqueries.txt  sqli-github-125.txt  sqli-hackers.txt  sqli-ibm.txt  sqli-misc.txt  sqli-mysql-implicit.txt  sqli-phpids.txt  sqli-rsalgado-bhusa2013.txt  sqli-rsalgado-bhusa213.txt  sqli-wordpress_rbarnett.txt  xss-html5secorg.txt  xss-owasp-cheatsheet-20131120.txt  xss-shazzer.txt  xss-smoke-test.txt  xss-soaj1664ashar-367350377894518784.txt  xss-soaj1664ashar-385461391366168576.txt  xss-soaj1664ashar-396307604734881792.txt  xss-soaj1664ashar-400257634449637376.txt  xss-soaj1664ashar-pastebin-u6FY1xDA.txt  xss-soaj1664ashar.txt  xss-unknown-pastebin-TVH8t5bQ.txt  xss-xenotix.txt
go/: main.go
lua/: Makefile  data2lua.py  lua.c  (+6 more)
src/: .gitignore  Makefile  Makefile.am  Makefile.in  fingerprints.txt  fingerprints2sqli.py  html5_cli.c  libinjection.h  libinjection_html5.c  libinjection_html5.h  libinjection_sqli.c  libinjection_sqli.h  libinjection_sqli_data.h  libinjection_xss.c  libinjection_xss.h  make_parens.py  reader.c  sqlparse2c.py  sqlparse_data.json  sqlparse_map.py  test-samples-sqli-negative.sh  test-samples-sqli-positive.sh  test-samples-xss-positive.sh  test-speed-sqli.sh  test-speed-xss.sh  test-unit.sh  test_driver.py  test_speed.c  testdriver.c
(+303 files in other folders)
